@@ -1,6 +1,7 @@
 * RELEASE 8
 - Pop unit AI
 - Group units on right click menu
+- Stack worker commands apply across unit types
 
 * RELEASE 7
 - Buttons on trade screen to quickly switch between civs
